2017-08-30 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-779

	* controlfiles/CMakeLists.txt:
	Move TestHybrid into ENABLE_RT4 loop as uses (ie requires) RT4 for the
	background rad field calc.

2017-08-30 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-778

	* src/m_fos.cc (iyHybrid):
	Bugfixed RTE integration part. Seems to work now.

	* controlfiles/artscomponents/hybridscat/TestHybrid.arts, yREFERENCE.xml,
	controlfiles/CMakeLists.txt:
	Added. Test case and reference solution for hybrid scatt solver. Added
	test case to standard checks.

	* src/rt4.cc (run_rt4):
	Re-enable empty-cloudbox capability that accidentially got lost during
	implementing the auto-increase streams option.

	* src/rte.cc:
	Minor spell fix.

	* src/workspace.cc (pnd_field):
	Added crossrefs to cloudbox_limits for understanding dimensions.

2017-08-30 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-777

	* src/jacobian.[h,cc] (calcBaselineFit):
	- New function to compute baseline fit without jacobian.

	* src/m_oem.cc (x2artsStandard):
	- Rewrite calculation of baselines to not require the jacobian

	* src/m_retrieval.cc:
	- Rename p2ZSimple to name output first
	- Make retrievalAddSinefit work

	* src/methods.cc:
	- Updated name of ZFromPSimple
	- Updated input arguments of x2artsStandard

	* src/covariance_matrix.cc (generate_blocks):
	- Remove unused counter variable

2017-08-29 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-776

	* src/m_fos.cc (iyHybrid):
	Couple of bug fixes. Running through now without core dump, but test
	results	indicate there's more to fix...

2017-08-29 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-775

	* 3rdparty/invlib/*:
	- Fixed overload resolution for multiplication
	- Fixed wrapper for covariance matrices

	* src/m_oem.cc:
	- Fixed check of ml_ga_settings
	- Deactivated log output for CG solver

	* src/m_retrieval.cc:
	- Added P2zSimple method