@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Matrix nrows="1" ncols="1">
+0.810137388908123
+</Matrix>
+</arts>
